# generating-first-species-counterpoint

./: LICENSE.txt  README.md  pyproject.toml
examples/: example.json  just_chords.json  just_melody.json
src/harmonize/: __init__.py  cli.py  io.py  solution.py  solver.py
src/harmonize/solution/: __init__.py  chord.py  intervals.py  key.py  note.py  solution.py
tests/: io_test.py  solver_test.py
